syntax = "proto3";

import "proto/user_id.proto";
import "proto/grp.proto";

package acl;

// Access control list for BuildBuddy objects.
message ACL {
  // ID of the user that owns the object.
  user_id.UserId user_id = 1;

  // ID of the group that owns the object.
  string group_id = 2;

  Permissions owner_permissions = 3;
  Permissions group_permissions = 4;
  Permissions others_permissions = 5;

  // Role permissions specify the permissions that are granted to any user
  // within the owner group (given by group_id) that fulfills the given role.
  repeated RolePermissions role_permissions = 6;

  message Permissions {
    bool read = 1;
    bool write = 2;
  }
}

message RolePermissions {
  grp.Group.Role role = 1;
  ACL.Permissions permissions = 2;
}

enum ResourceType {
  UNKNOWN = 0;
  API_KEYS = 1;
  ORG_DETAILS = 2;
  ORG_MEMBERS = 3;
  ORG_GITHUB_LINK = 4;
  WORKFLOWS = 5;
  EXECUTORS = 6;
}

message ResourceRolePermissions {
  ResourceType resource_type = 1;
  repeated RolePermissions role_permissions = 2;
}
